added the first blog

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github file</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-
+    <div>
+    <h2>My website with github</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nesciunt pariatur repudiandae eligendi blanditiis, unde nemo reiciendis earum consectetur, velit placeat tempore dolorem quas, repellat temporibus suscipit facere veniam ratione?</p></div>
 </body>
 
 </html>
