--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github file</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="pic logo.png" type="image/x-icon">
 </head>
 
 <body>
     <div>
-    <h2>My website with github</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nesciunt pariatur repudiandae eligendi blanditiis, unde nemo reiciendis earum consectetur, velit placeat tempore dolorem quas, repellat temporibus suscipit facere veniam ratione?</p></div>
+        <h2>My website with github</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nesciunt pariatur repudiandae eligendi
+            blanditiis, unde nemo reiciendis earum consectetur, velit placeat tempore dolorem quas, repellat temporibus
+            suscipit facere veniam ratione?</p>
+    </div>
 </body>
 
 </html>
